-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.15.0-beta1
-
None
-
280545fdf89fe92b6f2b6b28e2c4d86c862c3d71 (qt-creator/qt-creator/4.14)
Had a quite simple subdirs project open (base application, subdirs: tests)
Opened single test file, edited, saved, closed QC.
SOFT ASSERT: "view" in file C:\dev\qt-creator_master\src\plugins\coreplugin\editormanager\editormanager.cpp, line 2646
happened twice while shutting down QC
| For Gerrit Dashboard: QTCREATORBUG-24869 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 338506,2 | Editors: Fix soft assert about empty currentView | 4.14 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 339082,2 | Editors: Fix another soft assert about current view | 4.14 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |