Editors: Fix soft assert about empty currentView

We need to always either have a current view or a current editor.
Make sure we set the current view if we end up without a current
editor when closing files.

Amends ee1e6ca50821ace4323a0838452dda59b1a352a2

Fixes: QTCREATORBUG-24869
Change-Id: I9e1982697700079e037695e100ef71eadaf7849f
Reviewed-by: David Schulz <david.schulz@qt.io>